--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
   </head>
 
   <body>
-    <div class="component">
-      <div class="component__image">
-        <img src="./images/image-qr-code.png" alt="QR Code leading to the frontend mentor website">
-      </div>
-      <h2>Improve your front-end skills by building projects</h2>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <div class="qrcode-component">
+      <div class="qrcode-component__image"><img src="./images/image-qr-code.png"
+          alt="QR Code leading to the frontend mentor website" /></div>
+
+
+      <h2 class="qrcode-component__title">Improve your front-end skills by building projects</h2>
+      <p class="qrcode-component__paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level</p>
     </div>
 
     <div class="attribution">
